...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.midtrans.sdk.ui.widgets.FancyButton
        android:id="@+id/btn_pay_now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
...

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.midtrans.sdk.ui.widgets.ColoredTextInputEditText
                            android:id="@+id/et_card_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789 "
                            android:hint="@string/hint_card_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="19"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/et_exp_date"
                            tools:text="4811 1111 1111 1114" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.midtrans.sdk.ui.widgets.AspectRatioImageView
                                android:id="@+id/bank_logo"
                                android:layout_width="@dimen/bank_logo_size"
                                android:layout_height="@dimen/bank_logo_size"
                                android:layout_marginEnd="@dimen/four_dp"
                                android:layout_marginRight="@dimen/four_dp"
                                tools:src="@drawable/bri" />

...
                                android:layout_gravity="bottom"
                                android:hint="@string/hint_expiry_date"
                                android:imeOptions="actionNext"
                                android:inputType="date"
                                android:maxLength="7"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/et_cvv" />
                        </RelativeLayout>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/cvv_til"
...
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_installment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_save_card_detail"
                android:layout_marginTop="@dimen/four_dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
...
                        android:background="@color/gray.secondary"
                        android:gravity="center"
                        android:text="@string/installment_term"
                        android:textStyle="bold" />

                    <com.midtrans.sdk.ui.widgets.FancyButton
                        android:id="@+id/button_installment_increase"
                        android:layout_width="@dimen/forty_dp"
                        android:layout_height="@dimen/forty_dp"
                        app:fb_borderColor="@color/gray.primary"
                        app:fb_borderWidth="1dp"
                        app:fb_defaultColor="@android:color/white"
                        app:fb_focusColor="@color/colorAccentLight"
...
