...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_billing">


                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_address"
                            android:maxLength="300"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:id="@+id/city_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/address_til">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_city"
                            android:maxLength="100"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:id="@+id/zip_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/city_til">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_zipcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignTop="@+id/zip_til"
                            android:hint="@string/hint_zip_code"
...
                        android:id="@+id/country_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/zip_til">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/et_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_country"
                            android:imeOptions="actionDone"
                            android:maxLength="100"
                            android:maxLines="1" />
...
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.midtrans.sdk.uikit.widgets.FancyButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        app:fb_defaultColor="@color/gray.primary"
...
