<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.midtrans.sdk.uiflow.fragments.UserDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="100"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name_til">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_til">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLength="15"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/phone_til">

            <Button
                android:id="@+id/btn_next"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_alignParentBottom="true"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>