...
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/card_not_secure" />

                <RadioButton
                    android:id="@+id/radio_secure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/card_secure" />
            </RadioGroup>

...
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/bank_mandiri"
                    android:textSize="@dimen/small_text_size" />

                <RadioButton
                    android:id="@+id/radio_bca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/bank_bca"
                    android:textSize="@dimen/small_text_size" />

...
                    android:layout_weight="0.5"
                    android:text="@string/btn_show_core"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/show_ui_flow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_weight="0.5"
                    android:text="@string/btn_show_ui_flow"
                    android:textColor="@color/white" />
...
